--- a/src/creator.scss
+++ b/src/creator.scss
@@ -67,6 +67,7 @@ body {
 	background-color : #2F3944;
 	color : #fff;
 	font-family : "Lato", "Arial", sans-serif;
+	overflow-x: hidden;
 }
 
 #header {
@@ -205,12 +206,14 @@ body {
 			transform : rotateX(-180deg) translatez(50px);
 			opacity : 0;
 			height  : 0;
+			margin-top: 0;
 		}
 		&.ng-enter.ng-enter-active,
 		&.ng-leave {
 			transform : rotateX(0deg) translatez(0);
 			opacity : 1;
-			height  : 55px;
+			height  : 48px;
+			margin-top: 15px;
 		}
 		textarea {
 			vertical-align: middle;
