--- a/src/player.less
+++ b/src/player.less
@@ -19,8 +19,8 @@
 	font-style  : normal;
 }
 
-::-webkit-scrollbar { 
-    display : none; 
+::-webkit-scrollbar {
+    display : none;
 }
 html, body {
 	position         : absolute;
@@ -44,9 +44,12 @@ html, body {
 	top              : 0;
 	z-index          : 0;
 	width            : 100%;
-	height           : 80px;
+	height           : 50px;
 	background-color : #3498DB;
-	h1 { text-align : center; }
+	h1 {
+		text-align : center;
+		margin-top : 5px;
+	}
 }
 .unselectable {
 	opacity : 0.6;
@@ -60,9 +63,9 @@ html, body {
 .gameboard {
 	z-index  : 20;
 	position : absolute;
-	top      : 90px;
+	top      : 45px;
 	width    : 100%;
-	height: 400px;
+	height: 425px;
 	transition : all 600ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
 	transform-style : preserve-3d;
 	transform-origin : 0 550px;
@@ -188,13 +191,11 @@ html, body {
 				position: absolute;
 				left: 0;
 				transition: 200ms;
-				display: none;
 				&.shown {
 					clear: both;
 					opacity: .85;
 					pointer-events: all;
 					transition: 300ms;
-					transition-delay: 400ms;
 					display: block;
 				}
 				.popup-arrow {
@@ -205,14 +206,14 @@ html, body {
 					top: 0;
 					left: 0;
 					&.right {
-						left: -30px;
+						left: -20px;
 						margin-right   : 0px;
-						border-left  	: 20px solid #FFF;
+						border-left    : 20px solid #FFF;
 						&:before {
 							content: " ";
 							position       : absolute;
 							border-bottom  : 20px solid transparent;
-							border-top     : 20px solid transparent;	
+							border-top     : 20px solid transparent;
 							border-left   : 20px solid #DDD;
 							height: 4px;
 							margin-top: -20px;
@@ -221,7 +222,6 @@ html, body {
 						}
 					}
 					&.left {
-						left           : 20px;
 						margin-left   : 245px;
 						border-right   : 20px solid #FFF;
 						&:before {
@@ -229,7 +229,7 @@ html, body {
 							position       : absolute;
 							left: 0;
 							border-bottom  : 20px solid transparent;
-							border-top     : 20px solid transparent;	
+							border-top     : 20px solid transparent;
 							border-right   : 20px solid #DDD;
 							height: 4px;
 							margin-top: -20px;
@@ -256,17 +256,17 @@ html, body {
 					clear: both;
 					pointer-events	 : none;
 					&.left {
-						left: 295px;
+						left: 275px;
 					}
 					&.right {
-						left: -390px;
+						left: -380px;
 					}
 					&.scrollable {
 						pointer-events: all;
 					}
 				}
 			}
-			
+
 			&.selected {
 				.word-text {
 					background-color    : #27AE60;
@@ -278,7 +278,7 @@ html, body {
 					.word-text {
 						color               : #DECEC8;
 						background-color    : #27AE60;
-						border-bottom-color : #1F8D4E; 
+						border-bottom-color : #1F8D4E;
 					}
 				}
 				.word-text {
@@ -307,7 +307,7 @@ html, body {
 		position : relative;
 		margin   : -90px 0 0 0;
 		width    : 100%;
-		height   : 450px;
+		height   : 525px;
 		z-index  : -1;
 		svg {
 			height : 100%;
@@ -487,12 +487,12 @@ footer {
 			background-color            : rgb(76, 123, 194);
 			text-align                  : center;
 			font-size                   : 16px;
-			padding                     : 20px 10px 60px 10px;
+			padding                     : 12px 10px 108px 10px;
 			border-radius               : 100%;
-			top                         : -70px;
+			top                         : -55px;
 			left                        : 50%;
-			width                       : 80px;
-			margin                      : 10px 0 0 -50px;
+			width                       : 120px;
+			margin                      : 10px 0 0 -70px;
 			transition                  : all 600ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
 			-webkit-transform-style     : preserve-3d;
 			-webkit-transform           : translate3d(0,0,0);
@@ -578,8 +578,8 @@ footer {
 	}
 }
 
-@media only screen 
-and (min-device-width : 768px) 
+@media only screen
+and (min-device-width : 768px)
 and (max-device-width : 1024px) {
 	 .word.matched:hover {
 		.word-text {
@@ -590,8 +590,8 @@ and (max-device-width : 1024px) {
 	}
 }
 
-@media only screen 
-and (min-device-width : 768px) 
+@media only screen
+and (min-device-width : 768px)
 and (max-device-width : 1024px)
 and (-webkit-min-device-pixel-ratio: 2){
 	.word.matched:hover {
