--- a/src/player.less
+++ b/src/player.less
@@ -65,7 +65,7 @@ html, body {
 	position : absolute;
 	top      : 45px;
 	width    : 100%;
-	height: 425px;
+	height: 445px;
 	transition : all 600ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
 	transform-style : preserve-3d;
 	transform-origin : 0 550px;
@@ -191,9 +191,11 @@ html, body {
 				position: absolute;
 				left: 0;
 				transition: 200ms;
+				width: 0;
+				height: 0;
 				&.shown {
 					clear: both;
-					opacity: .85;
+					opacity: .9;
 					pointer-events: all;
 					transition: 300ms;
 					display: block;
@@ -214,7 +216,7 @@ html, body {
 							position       : absolute;
 							border-bottom  : 20px solid transparent;
 							border-top     : 20px solid transparent;
-							border-left   : 20px solid #DDD;
+							border-left    : 20px solid #DDD;
 							height: 4px;
 							margin-top: -20px;
 							margin-left: -20px;
@@ -222,8 +224,8 @@ html, body {
 						}
 					}
 					&.left {
-						margin-left   : 245px;
-						border-right   : 20px solid #FFF;
+						margin-left : 245px;
+						border-right: 20px solid #FFF;
 						&:before {
 							content: " ";
 							position       : absolute;
