--- a/src/player.less
+++ b/src/player.less
@@ -499,6 +499,7 @@ footer {
 			-webkit-transform-style     : preserve-3d;
 			-webkit-transform           : translate3d(0,0,0);
 			-webkit-backface-visibility : hidden;
+			transform                   : rotate(-1deg);
 		}
 	}
 }
