--- a/src/audioControls.scss
+++ b/src/audioControls.scss
@@ -32,8 +32,8 @@
 	background-color: #2d896a;
 	color: #fff;
 	width: 36px;
-	height: 36px;
-	line-height: 36px;
+	height: 30px;
+	line-height: 30px;
 	display: inline-block;
 
 	position: relative;
@@ -55,9 +55,9 @@
 }
 
 .duration {
-	font-family: 'CorbelBold', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: bold;
-	font-size: .6em;
+	font-size: .5em;
 }
 
 .play-btn {
