--- a/src/player.scss
+++ b/src/player.scss
@@ -777,14 +777,17 @@ $star_patterns: 30;
 	span {
 		position: relative;
 		display: block;
+		height:15px;
 		margin: 3px;
 
 		font-family: 'Montserrat', sans-serif;
-		font-size: 12px;
+		font-size: 0.6em;
 		font-weight: bold;
 		color: #fff;
 
 		background: #262626;
+
+		text-align: center;
 
 		&.point-left {
 			letter-spacing: 0.5px;
@@ -1065,7 +1068,7 @@ footer {
 				position: relative;
 				display: block;
 				margin: auto;
-				overflow-x: hidden;
+				overflow: hidden;
 
 				width: 100px;
 				height: 50px;
