--- a/src/creator.scss
+++ b/src/creator.scss
@@ -20,6 +20,13 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
+$white: #fff;
+$black: #000;
+$gray: #878787;
+$gray-dark: #363636;
+$hover-purple: #d4cee2;
+
 .icon-alert, .icon-plus, .icon-close, .audio-image {
 	font-family: 'icomoon';
 	speak: none;
@@ -35,7 +42,7 @@
 .icon-plus:before {
 	font-family: 'icomoon';
 	content: "\e007";
-	color: #fff;
+	color: $black;
 	margin-right: 8px;
 	margin-left: -10px;
 }
@@ -43,8 +50,6 @@
 	content : "\00d7";
 	font-weight: bold;
 }
-
-$green: #70bd34;
 
 input:focus,
 select:focus,
@@ -69,8 +74,13 @@ html, body, div {
 }
 html { min-height : 100%; }
 body {
-	background-color : #2F3944;
-	color : #fff;
+	// background-color : #2F3944;
+	background: #453b5c;
+	background: radial-gradient(ellipse at center, #453b5c 0%, #453b5c 20%, #000008 100%);
+	// border: solid 2px #333333;
+	// border-radius: 25% / 7%;
+
+	color : $white;
 	font-family : "Lato", "Arial", sans-serif;
 	overflow-x: hidden;
 }
@@ -85,7 +95,7 @@ body {
 	padding: 13px 8px;
 	z-index: 100;
 
-	border-bottom: solid 10px #3393e3;
+	border-bottom: solid 2px $gray;
 
 	.bottom {
 		position:absolute;
@@ -93,7 +103,7 @@ body {
 		right: 0px;
 		bottom: 0px;
 		margin: 0px -8px;
-		border-bottom: solid 1px #fff;
+		border-bottom: solid 1px $white;
 	}
 
 	.logo {
@@ -157,7 +167,7 @@ body {
 			width       : 100%;
 			margin-left : 10px;
 			background  : #3498DB;
-			color       : #FFF;
+			color       : $white;
 			border      : none;
 			font-size   : 18px;
 		}
@@ -176,7 +186,7 @@ body {
 	.titles h1 {
 		display   : inline-block;
 		padding   : 10px 0 0 0;
-		color     : #fff;
+		color     : $white;
 		font-family: 'Lato', serif;
 		font-weight: 300;
 		font-size : 19px;
@@ -265,7 +275,7 @@ body {
 				width            : 250px;
 				padding          : 10px;
 				color            : #222;
-				background-color : #FFF;
+				background-color : $white;
 				font-size        : 15px;
 				white-space      : normal;
 				word-wrap        : break-word;
@@ -283,19 +293,20 @@ body {
 			margin         : 0 5px 0 5px;
 			max-width      : 390px;
 			border-radius  : 5px;
-			background     : #1ABC9C;
-			border-bottom  : 3px solid #15987e;
+			background     : #cacac9;
+			border-bottom  : 3px solid $gray;
 			overflow       : visible;
 			display        : inline-block;
 			position	   : relative;
+			// color         : $black;
 
 			textarea {
-				color          : #fff;
+				color          : $gray-dark;
 				font-size      : 20px;
 				font-family    : "CorbelBold", sans-serif;
 				line-height: 1.2;
 				vertical-align : middle;
-				background     : #1ABC9C;
+				background     : #cacac9;
 				padding        : 10px 0 0 25px;
 				border-width: 0px 0px 3px 0px;
 				border-bottom: solid 3px rgba(0,0,0,0);
@@ -327,7 +338,7 @@ body {
 				}
 			}
 			.audio-image {
-				color: #98e2d3;
+				color: $gray-dark;
 				display : inline-block;
 				cursor: pointer;
 				font-size: 1.5em;
@@ -335,10 +346,10 @@ body {
 				width: 32px;
 				margin: 0;
 				vertical-align: middle;
-				border-left: 1px solid #15987e;
+				border-left: 1px solid $gray-dark;
 
 				&:hover {
-					color: #fff;
+					color: $white;
 				}
 
 				.add-audio:before {
@@ -355,6 +366,7 @@ body {
 			font-size     : 17px;
 			font-family   : Arial;
 			cursor        : pointer;
+			color         : $black;
 		}
 		.desc-input {
 			width         : 190px;
@@ -362,23 +374,23 @@ body {
 			border        : none;
 			font-size     : 17px;
 			font-family   : CorbelBold, sans-serif;
-			background    : #1ABC9C;
-			color         : #fff;
+			// background    : #1ABC9C;
+			color         : $black;
 		}
 		/* Change Placeholder Text Color */
 		::-webkit-input-placeholder { /* Chrome */
-		  color: #fff;
+			color: $gray-dark;
 		}
 		:-ms-input-placeholder { /* IE 10+ */
-		  color: #fff;
+			color: $gray-dark;
 		}
 		::-moz-placeholder { /* Firefox 19+ */
-		  color: #fff;
-		  opacity: 1;
+			color: $gray-dark;
+			opacity: 1;
 		}
 		:-moz-placeholder { /* Firefox 4 - 18 */
-		  color: #fff;
-		  opacity: 1;
+			color: $gray-dark;
+			opacity: 1;
 		}
 		audio::-webkit-media-controls {
 			overflow : hidden !important
@@ -419,20 +431,20 @@ body {
 		left             : 50%;
 		margin-top       : 50px;
 		bottom           : 0;
-		background-color : $green;
+		background-color : $white;
 		padding          : 10px 28px;
-		color: #fff;
+		color: $black;
 		border: none;
 		font-size: 16px;
 		font-family: 'Lato';
 
 		&:focus {
-			background: #78bf39;
-			box-shadow: 0px 0px 10px $green;
+			background: $hover-purple;
+			box-shadow: 0px 0px 10px $hover-purple;
 		}
 		&:hover{
-			background: #78DD5E;
-			color: #000;
+			background: $hover-purple;
+			color: $black;
 			cursor: pointer;
 		}
 	}
@@ -444,7 +456,7 @@ body {
 	right: 0px;
 	bottom: 0px;
 	left: 0px;
-	background: #000;
+	background: $black;
 	z-index: -1;
 	opacity: 0;
 	transition: all 0.5s ease;
@@ -463,7 +475,7 @@ body {
 	margin-top: -210px;
 	padding: 15px;
 	position: absolute;
-	background: #fff;
+	background: $white;
 	border: solid 1px #777;
 	z-index: -1;
 	opacity: 0;
@@ -507,9 +519,9 @@ body {
 		margin-top: 20px;
 		padding: 12px;
 		width: 150px;
-		background: $green;
+		background: $gray;
 		margin-left: 4px;
-		color: #fff;
+		color: $black;
 		border: none;
 		vertical-align: baseline;
 		font-size: 18px;
@@ -523,14 +535,14 @@ body {
 			border: solid 1px #333;
 			font-size: 16px;
 			color: #333;
-			background: #fff;
-			border: solid 2px #70bd34;
+			background: $white;
+			border: solid 2px $gray;
 			padding: 11px;
 			margin-left: 0px;
 		}
 		&[type=button]:hover, &[type=submit]:hover{
-			background: #78DD5E;
-			color: #000;
+			background: $hover-purple;
+			color: $black;
 			cursor: pointer;
 		}
 	}
