--- a/src/player.scss
+++ b/src/player.scss
@@ -564,12 +564,12 @@ $star_patterns: 30;
 				padding          : 5px 0px;
 				border           : 1px solid #fff;
 				border-radius    : 10px;
-				height           : 30px;
+				height           : 40px;
 				transition       : 0.2s;
 				.text-wrapper {
 					display          : inline-block;
 					vertical-align   : middle;
-					max-height       : 30px;
+					max-height       : 40px;
 					width            : 206px;
 					white-space      : normal;
 					word-wrap        : break-word;
@@ -595,8 +595,8 @@ $star_patterns: 30;
 					position       : absolute;
 					width          : 12px;
 					height         : 11px;
-					color          : #FFFFFF;
-					background     : #9c9c9c;
+					color          : #9c9c9c;
+					background     : #FFF;
 					right          : -5px;
 					top            : -5px;
 					font-size      : 8px;
