#1 Tweak to selected text background color in creator.

--- a/src/creator.scss
+++ b/src/creator.scss
@@ -313,6 +313,10 @@ body {
 				width          : 200px;
 				max-width      : 390px;
 
+				&::selection {
+					background: #969696;
+				}
+
 				// &.ng-empty.question-text.ng-touched:not(:focus) {
 				&.hasProblem:not(.focused) {
 					background-color: #FFBA74;
