--- a/src/player.scss
+++ b/src/player.scss
@@ -1330,7 +1330,7 @@ footer {
 
 			border-radius: 50px;
 			background: radial-gradient(rgba(#fff, 0.5), rgba(#000, 0.25));
-			border: 5px solid #8d4a4a;
+			border: 5px solid #301c1c;
 		}
 
 		.progress-container {
@@ -1353,7 +1353,7 @@ footer {
 			border-radius: 50px;
 			box-shadow: 0px 0px 30px 5px rgba(162, 64, 64, 0.5);
 
-			background: rgba(#a24040, 0.4);
+			background: rgba(#a24040, 0.6);
 
 			animation: blinking 1s step-start 0s infinite;
 			pointer-events: all;
