Changed color of audio duration text

--- a/src/audioControls.scss
+++ b/src/audioControls.scss
@@ -65,7 +65,7 @@ $hover-purple: #d4cee2;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: bold;
 	font-size: .5em;
-	color: $gray-dark;
+	color: $white;
 }
 
 .play-btn {
