Modified audio duration position

--- a/src/audioControls.scss
+++ b/src/audioControls.scss
@@ -62,6 +62,7 @@ $hover-purple: #d4cee2;
 }
 
 .duration {
+	margin-top: 0.5em;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: bold;
 	font-size: .5em;
