--- a/src/player.scss
+++ b/src/player.scss
@@ -1406,14 +1406,18 @@ footer {
 				radial-gradient(circle at top left, #ffffff 40%, #c0c0c0 100%);
 			background-origin: border-box;
 			background-clip: content-box, border-box;
+			color: white;
+			font-family: 'Montserrat', sans-serif;
+
 		}
 		&:after {
 			content: '';
 			position:absolute;
-			top: 5px;
-			left: 5px;
+			bottom: 3px;
+			left: 3px;
 			width: 75px;
 			height: 75px;
+			
 
 			border-radius: 50px;
 			border: 1px solid rgba(0,0,0,0.5);
@@ -1438,6 +1442,9 @@ footer {
 			position:absolute;
 			width: 75px;
 			height: 75px;
+			bottom:-2px;
+			right: -2px;
+		
 
 			border-radius: 50px;
 			background: radial-gradient(rgba(#fff, 0.5), rgba(#000, 0.25));
@@ -1446,6 +1453,8 @@ footer {
 
 		.progress-container {
 			position: absolute;
+			top: -2px;
+			right: -2px;
 			width: 85px;
 			height: 85px;
 			transform: rotate(-90deg);
@@ -1460,6 +1469,8 @@ footer {
 			position: absolute;
 			width: 100%;
 			height: 100%;
+			left: 2px;
+			top: 3px;
 
 			border-radius: 50px;
 			box-shadow: 0px 0px 30px 5px rgba(162, 64, 64, 0.5);
@@ -1498,7 +1509,7 @@ footer {
 	}
 }
 
-#instructions {
+ #instructions {
   position: absolute;
   width: 520px;
   height: 100%;
@@ -1517,7 +1528,7 @@ footer {
   letter-spacing: 1px;
 
   padding: 0 12px;
- overflow: hidden;
+  overflow: hidden;
 
   transition: all 0.9s ease-out;
 
