--- a/src/creator.scss
+++ b/src/creator.scss
@@ -92,8 +92,8 @@ body {
 	transform: translate(-50%, -50%);
 	border: 4px solid #caa3e9;
 	border-radius: 5px;
-	background-color: white;
-	color: black;
+	background-color: $white;
+	color: $black;
 	height: 200px;
 	width: 300px;
 	display: flex;
@@ -138,7 +138,7 @@ body {
 
 	.dialogCloseButton {
 		display: block;
-		color: white;
+		color: $white;
 		border-radius: 3px;
 		margin-bottom: 15px;
 		height: 30px;
@@ -151,7 +151,7 @@ body {
 
 		&:disabled {
 			background-color: #cccccc;
-			color: white;
+			color: $white;
 		}
 	}
 
@@ -183,14 +183,14 @@ body {
 		height: 40px;
 		width: 120px;
 		align-content: center;
-		color: black;
+		color: $black;
 		border-radius  : 5px;
-		border-bottom  : 4px solid rgb(153, 110, 188);
+		border-bottom  : 4px solid #996ebc;
 		background-color: #c28bee;
 
 		&:hover {
 			background-color: #453b5c;
-			color: white;
+			color: $white;
 		}
 	}
 
