disabled gray-out when no word pairs exist

--- a/src/creator.scss
+++ b/src/creator.scss
@@ -135,7 +135,7 @@ body {
 			cursor: not-allowed;
 		}
 
-		&.gray-out {
+		&.gray-out:not(:disabled) {
 			background-color: $gray;
 			border: 1px solid $gray;
 			color: $white;
