Minor styling changes

--- a/src/creator.scss
+++ b/src/creator.scss
@@ -668,8 +668,8 @@ body {
 		cursor: grab;
 
 		&:hover {
-			background-color: #453b5c;
-			border: 1px solid #453b5c;
+			background-color: #6b5b91;
+			border: 1px solid #6b5b91;
 			color: $white;
 		}
 
