Added safeguarding for older qsets

--- a/src/creator.scss
+++ b/src/creator.scss
@@ -655,6 +655,12 @@ body {
 		}
 	}
 
+	.qb-warning {
+		font-size: 14px;
+		margin: 0;
+		text-align: center;
+	}
+
 	.dialog-close-button {
 
 		color: $black;
